# ingrid

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: deploy-web.yml
data/: .gitkeep
output/: .gitkeep
src/ingrid/: __init__.py  cli.py  config.py
src/ingrid/classification/: __init__.py  heuristic_classifier.py  language_detector.py  models.py  vision_classifier.py
src/ingrid/extraction/: __init__.py  htr.py  models.py  ocr.py  preprocessing.py  vision_extract.py
src/ingrid/llm/: __init__.py  base.py  ollama.py  ollama_cloud.py  structured.py
src/ingrid/processing/: __init__.py  cleanup.py  markdown.py  metadata.py  models.py  summarizer.py  translator.py
src/ingrid/storage/: __init__.py  database.py  models.py  vectorstore.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/data/: documents.json  network.json  stats.json
web/src/: App.vue
web/src/components/: BreakdownCard.vue  DocumentDetailModal.vue  HorizontalBarChart.vue  NavBar.vue  NetworkGraph.vue
web/src/composables/: useData.ts
web/src/router/: index.ts
web/src/types/: index.ts
web/src/views/: DashboardView.vue  DocumentsView.vue  NetworkView.vue
